[project]
name = "svc-lb-mux"
version = "0.2.3"
description = "Service LoadBalancer Multiplexer for Kubernetes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp==3.13.3",
  "kopf==1.38.0",
  "kr8s==0.20.14",
  "slack-sdk==3.39.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = []
