[project]
name = "svc-lb-mux"
version = "0.2.3"
description = "Service LoadBalancer Multiplexer for Kubernetes"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["kubernetes", "loadbalancer", "networking", "controller", "cloud-native"]
dependencies = [
  "aiohttp>=3.13.3",
  "kopf>=1.38.0",
  "kr8s>=0.20.14",
  "slack-sdk>=3.39.0",
]

[project.urls]
Homepage = "https://github.com/nowakeai/svc-lb-mux"
Repository = "https://github.com/nowakeai/svc-lb-mux"
Documentation = "https://github.com/nowakeai/svc-lb-mux/tree/main/docs"
Issues = "https://github.com/nowakeai/svc-lb-mux/issues"

[tool.uv]
package = false

[dependency-groups]
dev = []
