[project]
name = "svc-lb-mux"
version = "0.1.2"
description = "Service LoadBalancer Multiplexer for Kubernetes"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["kubernetes", "loadbalancer", "networking", "controller", "cloud-native"]
dependencies = [
  "fastapi>=0.136.3",
  "uvicorn>=0.48.0",
  "kopf>=1.44.5",
  "kr8s>=0.20.15",
  "slack-sdk>=3.42.0",
]

[project.urls]
Homepage = "https://github.com/nowakeai/svc-lb-mux"
Repository = "https://github.com/nowakeai/svc-lb-mux"
Documentation = "https://github.com/nowakeai/svc-lb-mux/tree/main/docs"
Issues = "https://github.com/nowakeai/svc-lb-mux/issues"

[tool.uv]
package = false

[dependency-groups]
dev = [
  "ruff>=0.15.14",
]
